--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ aiogram = "^3.12.0"
 python-dotenv = "^1.0.1"
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
 pytz = "^2024.1"
+alembic = "^1.13.2"
 
 
 [build-system]
