--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,17 @@
 services:
-    main:
-        build: .
+    bot:
+        build: 
+            context: .
+            dockerfile: Dockerfile.bot
+        env_file:
+            - .env
+        volumes:
+            - ./db:/app/db
+        restart: unless-stopped
+    scheduler:
+        build:
+            context: .
+            dockerfile: Dockerfile.scheduler
         env_file:
             - .env
         volumes:
