--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "online-lesson-manager"
-version = "0.2.0"
+version = "0.3.0"
 description = ""
 authors = ["SaraFarron <sarafarron@gmail.com>"]
 readme = "README.md"
@@ -13,6 +13,7 @@ sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
 pytz = "^2024.1"
 alembic = "^1.13.2"
 sqlalchemy-utils = "^0.41.2"
+aiojobs = "^1.3.0"
 
 
 [build-system]
