--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "online-lesson-manager"
-version = "0.8.2"
+version = "0.8.3"
 description = ""
-authors = ["SaraFarron <sarafarron@gmail.com>"]
+authors = ["SaraFarron <https://github.com/users/SaraFarron>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
