--- a/Dockerfile.bot
+++ b/Dockerfile.bot
@@ -1,25 +1,14 @@
 FROM python:3.12-slim
 
-# Configure Poetry
-ENV POETRY_VERSION=1.8.3
-ENV POETRY_HOME=/opt/poetry
-ENV POETRY_VENV=/opt/poetry-venv
-ENV POETRY_CACHE_DIR=/opt/.cache
-
-# Install poetry separated from system interpreter
-RUN python3 -m venv $POETRY_VENV \
-	&& $POETRY_VENV/bin/pip install -U pip setuptools \
-	&& $POETRY_VENV/bin/pip install poetry==${POETRY_VERSION}
-
-# Add `poetry` to PATH
-ENV PATH="${PATH}:${POETRY_VENV}/bin"
-
 WORKDIR /app
 
-# Install dependencies
-COPY poetry.lock pyproject.toml ./
-RUN poetry install
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-# Run your app
-COPY . /app
-CMD [ "poetry", "run", "python", "src/main.py"]
+COPY . .
+
+# Verification (we know this works)
+RUN python validate_imports.py
+
+# Fixed CMD - adds /app to Python path explicitly
+CMD ["sh", "-c", "PYTHONPATH=/app python src/main.py"]
