--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 import_db.sh
 *.sqlite
+db/*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -163,3 +164,6 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
+
+# VS Code
+.vscode/
