--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,3 @@
 {
-    "python.analysis.typeCheckingMode": "off",
-    "sqltools.connections": [
-        {
-            "previewLimit": 50,
-            "driver": "SQLite",
-            "name": "db",
-            "database": "${workspaceFolder:online-lesson-manager}/db/db.sqlite"
-        },
-        {
-            "previewLimit": 50,
-            "driver": "SQLite",
-            "name": "prod",
-            "database": "${workspaceFolder:online-lesson-manager}/db/prod.sqlite"
-        }
-    ],
-    "python.testing.pytestArgs": [
-        "tests"
-    ],
-    "python.testing.unittestEnabled": false,
-    "python.testing.pytestEnabled": true
+    "python.analysis.typeCheckingMode": "off"
 }
