--- a/telegram/pyproject.toml
+++ b/telegram/pyproject.toml
@@ -17,6 +17,9 @@ sqlalchemy-utils = "^0.41.2"
 aiojobs = "^1.3.0"
 pytest = "^8.4.1"
 freezegun = "^1.5.5"
+circuitbreaker = "^2.1.3"
+cachetools = "^6.2.5"
+httpx = "^0.28.1"
 
 
 [build-system]
