--- a/telegram/pyproject.toml
+++ b/telegram/pyproject.toml
@@ -22,6 +22,9 @@ cachetools = "^6.2.5"
 httpx = "^0.28.1"
 
 
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.15.2"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
